update pd exercise

--- a/00-Crash-Course-Topics/01-Crash-Course-Pandas/07-Pandas-Exercises.ipynb
+++ b/00-Crash-Course-Topics/01-Crash-Course-Pandas/07-Pandas-Exercises.ipynb
@@ -1503,27 +1503,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "secondary    68\n",
-       "tertiary     32\n",
-       "primary      26\n",
-       "unknown       2\n",
-       "Name: education, dtype: int64"
+       "'secondary'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# CODE HERE\n",
-    "df[df['job']=='unemployed']['education'].value_counts()"
+    "df[df['job']=='unemployed']['education'].value_counts().idxmax()"
    ]
   },
   {
