--- a/01-PyTorch-Basics/00-Tensor-Basics.ipynb
+++ b/01-PyTorch-Basics/00-Tensor-Basics.ipynb
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -398,17 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0., 0., 0.],\n",
-      "        [0., 0., 0.],\n",
-      "        [0., 0., 0.],\n",
-      "        [0., 0., 0.]])\n"
+      "tensor([[ 1.0000e+00,  2.0000e+00,  3.0000e+00],\n",
+      "        [ 0.0000e+00,  2.7512e+14,  4.6577e-10],\n",
+      "        [ 0.0000e+00, -3.6893e+19,  7.0065e-45],\n",
+      "        [-3.6893e+19,  2.7507e+14,  1.5849e+29]])\n"
      ]
     }
    ],
@@ -930,7 +930,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
