--- a/02-ANN-Artificial-Neural-Networks/00-PyTorch-Gradients.ipynb
+++ b/02-ANN-Artificial-Neural-Networks/00-PyTorch-Gradients.ipynb
@@ -258,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(140., grad_fn=<MeanBackward1>)\n"
+      "tensor(140., grad_fn=<MeanBackward0>)\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
