--- a/02-ANN-Artificial-Neural-Networks/04a-Full-ANN-Code-Along-Regression.ipynb
+++ b/02-ANN-Artificial-Neural-Networks/04a-Full-ANN-Code-Along-Regression.ipynb
@@ -40,9 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -68,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -178,14 +176,18 @@
        "4        40.734202         -73.905956         40.743115                1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('../Data/NYCTaxiFares.csv')\n",
-    "df.head()"
+    "df.head()\n",
+    "\n",
+    "# 1. it's difficult to interpret a direct longtitude and latitude\n",
+    "# 2. within the cities, there's not going to be extreme changes in \n",
+    "# longtitude and latitude, especially for shorter trips\n"
    ]
   },
   {
@@ -245,9 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def haversine_distance(df, lat1, long1, lat2, long2):\n",
@@ -571,28 +571,10 @@
     "df['EDTdate'] = pd.to_datetime(df['pickup_datetime'].str[:19]) - pd.Timedelta(hours=4)\n",
     "df['Hour'] = df['EDTdate'].dt.hour\n",
     "df['AMorPM'] = np.where(df['Hour']<12,'am','pm')\n",
-    "df['Weekday'] = df['EDTdate'].dt.strftime(\"%a\")\n",
+    "df['Weekday'] = df['EDTdate'].dt.strftime(\"%a\") \n",
+    "# format: https://www.programiz.com/python-programming/datetime/strftime\n",
+    "\n",
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Timestamp('2010-04-11 00:00:10')"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['EDTdate'].min()"
    ]
   },
   {
@@ -2074,7 +2056,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2088,7 +2070,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
