update ANN notes

--- a/02-ANN-Artificial-Neural-Networks/04b-Full-ANN-Code-Along-Classification.ipynb
+++ b/02-ANN-Artificial-Neural-Networks/04b-Full-ANN-Code-Along-Classification.ipynb
@@ -1529,7 +1529,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = nn.CrossEntropyLoss() # loss function for classification\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)"
    ]
   },
@@ -1550,6 +1550,7 @@
     "batch_size = 60000\n",
     "test_size = 12000\n",
     "\n",
+    "# data shuffled already\n",
     "cat_train = cats[:batch_size-test_size]\n",
     "cat_test = cats[batch_size-test_size:batch_size]\n",
     "con_train = conts[:batch_size-test_size]\n",
@@ -2053,7 +2054,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
