--- a/02-ANN-Artificial-Neural-Networks/04a-Full-ANN-Code-Along-Regression.ipynb
+++ b/02-ANN-Artificial-Neural-Networks/04a-Full-ANN-Code-Along-Regression.ipynb
@@ -1671,6 +1671,7 @@
     "batch_size = 60000\n",
     "test_size = int(batch_size * .2)\n",
     "\n",
+    "# data shuffled already\n",
     "cat_train = cats[:batch_size-test_size]\n",
     "cat_test = cats[batch_size-test_size:batch_size]\n",
     "con_train = conts[:batch_size-test_size]\n",
