update cnn note

--- a/03-CNN-Convolutional-Neural-Networks/00-MNIST-ANN-Code-Along.ipynb
+++ b/03-CNN-Convolutional-Neural-Networks/00-MNIST-ANN-Code-Along.ipynb
@@ -264,7 +264,8 @@
        "          [0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
        "           0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
        "           0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000,\n",
-       "           0.0000, 0.0000, 0.0000, 0.0000]]]), 5)"
+       "           0.0000, 0.0000, 0.0000, 0.0000]]]),\n",
+       " 5)"
       ]
      },
      "execution_count": 5,
@@ -298,7 +299,7 @@
     }
    ],
    "source": [
-    "image, label = train_data[0]\n",
+    "image, label = train_data[0] # 1 is an additional channel stands for black/white\n",
     "print('Shape:', image.shape, '\\nLabel:', label)"
    ]
   },
@@ -369,12 +370,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "torch.manual_seed(101)  # for consistent results\n",
     "\n",
+    "# feed in the model with 100 data one time as a batch\n",
     "train_loader = DataLoader(train_data, batch_size=100, shuffle=True)\n",
     "\n",
     "test_loader = DataLoader(test_data, batch_size=500, shuffle=False)"
@@ -439,6 +441,8 @@
     "im = make_grid(images[:12], nrow=12)  # the default nrow is 8\n",
     "plt.figure(figsize=(10,4))\n",
     "# We need to transpose the images from CWH to WHC\n",
+    "# CWH: color width height\n",
+    "# WHC: width height color\n",
     "plt.imshow(np.transpose(im.numpy(), (1, 2, 0)));"
    ]
   },
@@ -455,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -470,12 +474,38 @@
     "        X = F.relu(self.fc1(X))\n",
     "        X = F.relu(self.fc2(X))\n",
     "        X = self.fc3(X)\n",
-    "        return F.log_softmax(X, dim=1)"
+    "        return F.log_softmax(X, dim=1) # multi calss classification"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94080\n",
+      "120\n",
+      "10080\n",
+      "84\n",
+      "840\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# motivation from ANN to CNN\n",
+    "for param in model.parameters():\n",
+    "    print(param.numel())\n",
+    "    \n",
+    "# in this ANN model, the # parameters go up to 105,214"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +518,7 @@
        ")"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +660,7 @@
        "torch.Size([100, 784])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,49 +691,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:  0  batch:  200 [ 20000/60000]  loss: 0.35221729  accuracy:  82.695%\n",
-      "epoch:  0  batch:  400 [ 40000/60000]  loss: 0.32761699  accuracy:  87.340%\n",
-      "epoch:  0  batch:  600 [ 60000/60000]  loss: 0.31156573  accuracy:  89.490%\n",
-      "epoch:  1  batch:  200 [ 20000/60000]  loss: 0.20120722  accuracy:  94.800%\n",
-      "epoch:  1  batch:  400 [ 40000/60000]  loss: 0.14656080  accuracy:  95.185%\n",
-      "epoch:  1  batch:  600 [ 60000/60000]  loss: 0.12691295  accuracy:  95.478%\n",
-      "epoch:  2  batch:  200 [ 20000/60000]  loss: 0.13621402  accuracy:  96.815%\n",
-      "epoch:  2  batch:  400 [ 40000/60000]  loss: 0.07235763  accuracy:  96.790%\n",
-      "epoch:  2  batch:  600 [ 60000/60000]  loss: 0.04241359  accuracy:  96.878%\n",
-      "epoch:  3  batch:  200 [ 20000/60000]  loss: 0.09474990  accuracy:  97.635%\n",
-      "epoch:  3  batch:  400 [ 40000/60000]  loss: 0.06394162  accuracy:  97.600%\n",
-      "epoch:  3  batch:  600 [ 60000/60000]  loss: 0.07836709  accuracy:  97.562%\n",
-      "epoch:  4  batch:  200 [ 20000/60000]  loss: 0.05509195  accuracy:  98.135%\n",
-      "epoch:  4  batch:  400 [ 40000/60000]  loss: 0.06395346  accuracy:  98.125%\n",
-      "epoch:  4  batch:  600 [ 60000/60000]  loss: 0.05392118  accuracy:  98.105%\n",
-      "epoch:  5  batch:  200 [ 20000/60000]  loss: 0.03487724  accuracy:  98.515%\n",
-      "epoch:  5  batch:  400 [ 40000/60000]  loss: 0.03120600  accuracy:  98.433%\n",
-      "epoch:  5  batch:  600 [ 60000/60000]  loss: 0.03449132  accuracy:  98.402%\n",
-      "epoch:  6  batch:  200 [ 20000/60000]  loss: 0.04473587  accuracy:  98.770%\n",
-      "epoch:  6  batch:  400 [ 40000/60000]  loss: 0.05389304  accuracy:  98.770%\n",
-      "epoch:  6  batch:  600 [ 60000/60000]  loss: 0.04762774  accuracy:  98.685%\n",
-      "epoch:  7  batch:  200 [ 20000/60000]  loss: 0.01370908  accuracy:  98.885%\n",
-      "epoch:  7  batch:  400 [ 40000/60000]  loss: 0.01426961  accuracy:  98.945%\n",
-      "epoch:  7  batch:  600 [ 60000/60000]  loss: 0.04490321  accuracy:  98.902%\n",
-      "epoch:  8  batch:  200 [ 20000/60000]  loss: 0.02279496  accuracy:  99.150%\n",
-      "epoch:  8  batch:  400 [ 40000/60000]  loss: 0.03816750  accuracy:  99.060%\n",
-      "epoch:  8  batch:  600 [ 60000/60000]  loss: 0.02311455  accuracy:  99.055%\n",
-      "epoch:  9  batch:  200 [ 20000/60000]  loss: 0.01244260  accuracy:  99.330%\n",
-      "epoch:  9  batch:  400 [ 40000/60000]  loss: 0.00740430  accuracy:  99.340%\n",
-      "epoch:  9  batch:  600 [ 60000/60000]  loss: 0.01638621  accuracy:  99.280%\n",
+      "epoch:  0  batch:  200 [ 20000/60000]  loss: 0.26418406  accuracy:  83.545%\n",
+      "epoch:  0  batch:  400 [ 40000/60000]  loss: 0.26690170  accuracy:  87.772%\n",
+      "epoch:  0  batch:  600 [ 60000/60000]  loss: 0.40439987  accuracy:  89.705%\n",
+      "epoch:  1  batch:  200 [ 20000/60000]  loss: 0.24578470  accuracy:  94.905%\n",
+      "epoch:  1  batch:  400 [ 40000/60000]  loss: 0.26506555  accuracy:  94.983%\n",
+      "epoch:  1  batch:  600 [ 60000/60000]  loss: 0.11958397  accuracy:  95.258%\n",
+      "epoch:  2  batch:  200 [ 20000/60000]  loss: 0.12307896  accuracy:  96.635%\n",
+      "epoch:  2  batch:  400 [ 40000/60000]  loss: 0.06887203  accuracy:  96.713%\n",
+      "epoch:  2  batch:  600 [ 60000/60000]  loss: 0.17204952  accuracy:  96.657%\n",
+      "epoch:  3  batch:  200 [ 20000/60000]  loss: 0.02981359  accuracy:  97.510%\n",
+      "epoch:  3  batch:  400 [ 40000/60000]  loss: 0.17503820  accuracy:  97.450%\n",
+      "epoch:  3  batch:  600 [ 60000/60000]  loss: 0.17386898  accuracy:  97.477%\n",
+      "epoch:  4  batch:  200 [ 20000/60000]  loss: 0.04571964  accuracy:  98.040%\n",
+      "epoch:  4  batch:  400 [ 40000/60000]  loss: 0.01430762  accuracy:  98.025%\n",
+      "epoch:  4  batch:  600 [ 60000/60000]  loss: 0.18000183  accuracy:  97.997%\n",
+      "epoch:  5  batch:  200 [ 20000/60000]  loss: 0.07065340  accuracy:  98.495%\n",
+      "epoch:  5  batch:  400 [ 40000/60000]  loss: 0.07910137  accuracy:  98.480%\n",
+      "epoch:  5  batch:  600 [ 60000/60000]  loss: 0.03469519  accuracy:  98.433%\n",
+      "epoch:  6  batch:  200 [ 20000/60000]  loss: 0.03043209  accuracy:  98.835%\n",
+      "epoch:  6  batch:  400 [ 40000/60000]  loss: 0.01795606  accuracy:  98.737%\n",
+      "epoch:  6  batch:  600 [ 60000/60000]  loss: 0.03664907  accuracy:  98.687%\n",
+      "epoch:  7  batch:  200 [ 20000/60000]  loss: 0.05625346  accuracy:  98.880%\n",
+      "epoch:  7  batch:  400 [ 40000/60000]  loss: 0.03723517  accuracy:  98.855%\n",
+      "epoch:  7  batch:  600 [ 60000/60000]  loss: 0.06469870  accuracy:  98.848%\n",
+      "epoch:  8  batch:  200 [ 20000/60000]  loss: 0.00817188  accuracy:  99.370%\n",
+      "epoch:  8  batch:  400 [ 40000/60000]  loss: 0.08326317  accuracy:  99.153%\n",
+      "epoch:  8  batch:  600 [ 60000/60000]  loss: 0.00835078  accuracy:  99.077%\n",
+      "epoch:  9  batch:  200 [ 20000/60000]  loss: 0.00484296  accuracy:  99.295%\n",
+      "epoch:  9  batch:  400 [ 40000/60000]  loss: 0.06834546  accuracy:  99.180%\n",
+      "epoch:  9  batch:  600 [ 60000/60000]  loss: 0.01040762  accuracy:  99.208%\n",
       "\n",
-      "Duration: 275 seconds\n"
+      "Duration: 54 seconds\n"
      ]
     }
    ],
    "source": [
+    "# train_loader = DataLoader(train_data, batch_size=100, shuffle=True)\n",
+    "# we will feed multiple (100) batch per epoch\n",
+    "\n",
     "import time\n",
     "start_time = time.time()\n",
     "\n",
@@ -1076,7 +1109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
