--- a/06-NLP-with-PyTorch/00-RNN-for-Text-Generation .ipynb
+++ b/06-NLP-with-PyTorch/00-RNN-for-Text-Generation .ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "\"\\n                     1\\n  From fairest creatures we desire increase,\\n  That thereby beauty's rose might never die,\\n  But as the riper should by time decease,\\n  His tender heir might bear his memory:\\n  But thou contracted to thine own bright eyes,\\n  Feed'st thy light's flame with self-substantial fuel,\\n  Making a famine where abundance lies,\\n  Thy self thy foe, to thy sweet self too cruel:\\n  Thou that art now the world's fresh ornament,\\n  And only herald to the gaudy spring,\\n  Within thine own bud buriest thy content,\\n  And tender churl mak'st waste in niggarding:\\n    Pity the world, or else this glutton be,\\n    To eat the world's due, by the grave and thee.\\n\\n\\n                     2\\n  When forty winters shall besiege thy brow,\\n  And dig deep trenches in thy beauty's field,\\n  Thy youth's proud livery so gazed on now,\\n  Will be a tattered weed of small worth held:  \\n  Then being asked, where all thy beauty lies,\\n  Where all the treasure of thy lusty days;\\n  To say within thine own deep su\""
       ]
      },
-     "execution_count": 3,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "5445609"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,17 +167,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([(0, '9'), (1, 't'), (2, ','), (3, 'k'), (4, '`'), (5, '2'), (6, 'g'), (7, 'q'), (8, 'I'), (9, 'R'), (10, ';'), (11, 'd'), (12, 'Y'), (13, 'H'), (14, 'F'), (15, 'o'), (16, '5'), (17, 'x'), (18, 's'), (19, 'M'), (20, '.'), (21, 'm'), (22, 'A'), (23, 'L'), (24, '\\n'), (25, 'C'), (26, \"'\"), (27, '['), (28, 'Z'), (29, 'U'), (30, 'X'), (31, 'D'), (32, '6'), (33, 'J'), (34, 'c'), (35, 'v'), (36, 'z'), (37, 'l'), (38, 'N'), (39, 'h'), (40, '>'), (41, '!'), (42, 'y'), (43, '0'), (44, '-'), (45, 'a'), (46, ')'), (47, 'T'), (48, 'i'), (49, 'B'), (50, '4'), (51, '('), (52, '_'), (53, ' '), (54, ':'), (55, '?'), (56, 'S'), (57, '&'), (58, '1'), (59, 'P'), (60, 'G'), (61, '3'), (62, 'n'), (63, 'j'), (64, 'O'), (65, '}'), (66, '8'), (67, '|'), (68, '7'), (69, 'Q'), (70, 'E'), (71, 'b'), (72, '<'), (73, 'W'), (74, 'K'), (75, 'u'), (76, ']'), (77, '\"'), (78, 'r'), (79, 'V'), (80, 'e'), (81, 'f'), (82, 'w'), (83, 'p')])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# decoder\n",
-    "# decoder.items()"
+    "decoder\n",
+    "decoder.items()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,16 +197,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encoder"
+    "from collections import Counter\n",
+    "# Counter(all_characters)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'9': 0,\n",
+       " 't': 1,\n",
+       " ',': 2,\n",
+       " 'k': 3,\n",
+       " '`': 4,\n",
+       " '2': 5,\n",
+       " 'g': 6,\n",
+       " 'q': 7,\n",
+       " 'I': 8,\n",
+       " 'R': 9,\n",
+       " ';': 10,\n",
+       " 'd': 11,\n",
+       " 'Y': 12,\n",
+       " 'H': 13,\n",
+       " 'F': 14,\n",
+       " 'o': 15,\n",
+       " '5': 16,\n",
+       " 'x': 17,\n",
+       " 's': 18,\n",
+       " 'M': 19,\n",
+       " '.': 20,\n",
+       " 'm': 21,\n",
+       " 'A': 22,\n",
+       " 'L': 23,\n",
+       " '\\n': 24,\n",
+       " 'C': 25,\n",
+       " \"'\": 26,\n",
+       " '[': 27,\n",
+       " 'Z': 28,\n",
+       " 'U': 29,\n",
+       " 'X': 30,\n",
+       " 'D': 31,\n",
+       " '6': 32,\n",
+       " 'J': 33,\n",
+       " 'c': 34,\n",
+       " 'v': 35,\n",
+       " 'z': 36,\n",
+       " 'l': 37,\n",
+       " 'N': 38,\n",
+       " 'h': 39,\n",
+       " '>': 40,\n",
+       " '!': 41,\n",
+       " 'y': 42,\n",
+       " '0': 43,\n",
+       " '-': 44,\n",
+       " 'a': 45,\n",
+       " ')': 46,\n",
+       " 'T': 47,\n",
+       " 'i': 48,\n",
+       " 'B': 49,\n",
+       " '4': 50,\n",
+       " '(': 51,\n",
+       " '_': 52,\n",
+       " ' ': 53,\n",
+       " ':': 54,\n",
+       " '?': 55,\n",
+       " 'S': 56,\n",
+       " '&': 57,\n",
+       " '1': 58,\n",
+       " 'P': 59,\n",
+       " 'G': 60,\n",
+       " '3': 61,\n",
+       " 'n': 62,\n",
+       " 'j': 63,\n",
+       " 'O': 64,\n",
+       " '}': 65,\n",
+       " '8': 66,\n",
+       " '|': 67,\n",
+       " '7': 68,\n",
+       " 'Q': 69,\n",
+       " 'E': 70,\n",
+       " 'b': 71,\n",
+       " '<': 72,\n",
+       " 'W': 73,\n",
+       " 'K': 74,\n",
+       " 'u': 75,\n",
+       " ']': 76,\n",
+       " '\"': 77,\n",
+       " 'r': 78,\n",
+       " 'V': 79,\n",
+       " 'e': 80,\n",
+       " 'f': 81,\n",
+       " 'w': 82,\n",
+       " 'p': 83}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,45 +319,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([51, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
-       "       26, 26, 26, 26, 26, 41, 51, 26, 26, 31, 29, 39, 17, 26, 73, 14, 60,\n",
-       "       29, 46, 78, 21, 26, 35, 29, 46, 14, 21,  6, 29, 46, 78, 26,  2, 46,\n",
-       "       26, 65, 46, 78, 60, 29, 46, 26, 60, 55, 35, 29, 46, 14, 78, 46, 63,\n",
-       "       51, 26, 26, 62,  7, 14, 21, 26, 21,  7, 46, 29, 46, 74, 38, 26, 74,\n",
-       "       46, 14,  6, 21, 38, 77, 78, 26, 29, 39, 78, 46, 26, 17, 60, 82,  7,\n",
-       "       21, 26, 55, 46, 27, 46, 29, 26, 65, 60, 46, 63, 51, 26, 26, 67,  6,\n",
-       "       21, 26, 14, 78, 26, 21,  7, 46, 26, 29, 60, 22, 46, 29, 26, 78,  7,\n",
-       "       39,  6, 43, 65, 26, 74, 38, 26, 21, 60, 17, 46, 26, 65, 46, 35, 46,\n",
-       "       14, 78, 46, 63, 51, 26, 26, 36, 60, 78, 26, 21, 46, 55, 65, 46, 29,\n",
-       "       26,  7, 46, 60, 29, 26, 17, 60, 82,  7, 21, 26, 74, 46, 14, 29, 26,\n",
-       "        7, 60, 78, 26, 17, 46, 17, 39, 29, 38, 10, 51, 26, 26, 67,  6, 21,\n",
-       "       26, 21,  7, 39,  6, 26, 35, 39, 55, 21, 29, 14, 35, 21, 46, 65, 26,\n",
-       "       21, 39, 26, 21,  7, 60, 55, 46, 26, 39,  2, 55, 26, 74, 29, 60, 82,\n",
-       "        7, 21, 26, 46, 38, 46, 78, 63, 51, 26, 26, 31, 46, 46, 65, 77, 78,\n",
-       "       21, 26, 21,  7, 38, 26, 43, 60, 82,  7, 21, 77, 78, 26, 73, 43, 14,\n",
-       "       17, 46, 26,  2, 60, 21,  7, 26, 78, 46, 43, 73, 49, 78,  6, 74, 78,\n",
-       "       21, 14, 55, 21, 60, 14, 43, 26, 73,  6, 46, 43, 63, 51, 26, 26,  3,\n",
-       "       14, 28, 60, 55, 82, 26, 14, 26, 73, 14, 17, 60, 55, 46, 26,  2,  7,\n",
-       "       46, 29, 46, 26, 14, 74,  6, 55, 65, 14, 55, 35, 46, 26, 43, 60, 46,\n",
-       "       78, 63, 51, 26, 26, 62,  7, 38, 26, 78, 46, 43, 73, 26, 21,  7, 38,\n",
-       "       26, 73, 39, 46, 63, 26, 21, 39, 26, 21,  7, 38, 26, 78,  2, 46, 46,\n",
-       "       21, 26, 78, 46, 43, 73, 26, 21, 39, 39, 26, 35, 29,  6, 46, 43, 10,\n",
-       "       51, 26, 26, 62,  7, 39,  6, 26, 21,  7, 14, 21, 26, 14, 29, 21, 26,\n",
-       "       55, 39,  2, 26, 21,  7, 46, 26,  2, 39, 29, 43, 65, 77, 78, 26, 73,\n",
-       "       29, 46, 78,  7, 26, 39, 29, 55, 14, 17, 46, 55, 21, 63, 51, 26, 26,\n",
-       "       56, 55, 65, 26, 39, 55, 43, 38, 26,  7, 46, 29, 14, 43, 65, 26, 21,\n",
-       "       39, 26, 21,  7, 46, 26, 82, 14,  6, 65, 38, 26, 78, 22, 29, 60, 55,\n",
-       "       82, 63, 51, 26, 26, 40, 60, 21,  7, 60, 55, 26, 21,  7, 60, 55, 46,\n",
-       "       26, 39,  2, 55, 26, 74,  6])"
+       "array([24, 53, 53, 53, 53, 53, 53, 53, 53, 53, 53, 53, 53, 53, 53, 53, 53,\n",
+       "       53, 53, 53, 53, 53, 58, 24, 53, 53, 14, 78, 15, 21, 53, 81, 45, 48,\n",
+       "       78, 80, 18,  1, 53, 34, 78, 80, 45,  1, 75, 78, 80, 18, 53, 82, 80,\n",
+       "       53, 11, 80, 18, 48, 78, 80, 53, 48, 62, 34, 78, 80, 45, 18, 80,  2,\n",
+       "       24, 53, 53, 47, 39, 45,  1, 53,  1, 39, 80, 78, 80, 71, 42, 53, 71,\n",
+       "       80, 45, 75,  1, 42, 26, 18, 53, 78, 15, 18, 80, 53, 21, 48,  6, 39,\n",
+       "        1, 53, 62, 80, 35, 80, 78, 53, 11, 48, 80,  2, 24, 53, 53, 49, 75,\n",
+       "        1, 53, 45, 18, 53,  1, 39, 80, 53, 78, 48, 83, 80, 78, 53, 18, 39,\n",
+       "       15, 75, 37, 11, 53, 71, 42, 53,  1, 48, 21, 80, 53, 11, 80, 34, 80,\n",
+       "       45, 18, 80,  2, 24, 53, 53, 13, 48, 18, 53,  1, 80, 62, 11, 80, 78,\n",
+       "       53, 39, 80, 48, 78, 53, 21, 48,  6, 39,  1, 53, 71, 80, 45, 78, 53,\n",
+       "       39, 48, 18, 53, 21, 80, 21, 15, 78, 42, 54, 24, 53, 53, 49, 75,  1,\n",
+       "       53,  1, 39, 15, 75, 53, 34, 15, 62,  1, 78, 45, 34,  1, 80, 11, 53,\n",
+       "        1, 15, 53,  1, 39, 48, 62, 80, 53, 15, 82, 62, 53, 71, 78, 48,  6,\n",
+       "       39,  1, 53, 80, 42, 80, 18,  2, 24, 53, 53, 14, 80, 80, 11, 26, 18,\n",
+       "        1, 53,  1, 39, 42, 53, 37, 48,  6, 39,  1, 26, 18, 53, 81, 37, 45,\n",
+       "       21, 80, 53, 82, 48,  1, 39, 53, 18, 80, 37, 81, 44, 18, 75, 71, 18,\n",
+       "        1, 45, 62,  1, 48, 45, 37, 53, 81, 75, 80, 37,  2, 24, 53, 53, 19,\n",
+       "       45,  3, 48, 62,  6, 53, 45, 53, 81, 45, 21, 48, 62, 80, 53, 82, 39,\n",
+       "       80, 78, 80, 53, 45, 71, 75, 62, 11, 45, 62, 34, 80, 53, 37, 48, 80,\n",
+       "       18,  2, 24, 53, 53, 47, 39, 42, 53, 18, 80, 37, 81, 53,  1, 39, 42,\n",
+       "       53, 81, 15, 80,  2, 53,  1, 15, 53,  1, 39, 42, 53, 18, 82, 80, 80,\n",
+       "        1, 53, 18, 80, 37, 81, 53,  1, 15, 15, 53, 34, 78, 75, 80, 37, 54,\n",
+       "       24, 53, 53, 47, 39, 15, 75, 53,  1, 39, 45,  1, 53, 45, 78,  1, 53,\n",
+       "       62, 15, 82, 53,  1, 39, 80, 53, 82, 15, 78, 37, 11, 26, 18, 53, 81,\n",
+       "       78, 80, 18, 39, 53, 15, 78, 62, 45, 21, 80, 62,  1,  2, 24, 53, 53,\n",
+       "       22, 62, 11, 53, 15, 62, 37, 42, 53, 39, 80, 78, 45, 37, 11, 53,  1,\n",
+       "       15, 53,  1, 39, 80, 53,  6, 45, 75, 11, 42, 53, 18, 83, 78, 48, 62,\n",
+       "        6,  2, 24, 53, 53, 73, 48,  1, 39, 48, 62, 53,  1, 39, 48, 62, 80,\n",
+       "       53, 15, 82, 62, 53, 71, 75])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +409,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_hot = np.zeros((np.array([1,2,0]).size,3))\n",
+    "one_hot = one_hot.astype(np.float32)\n",
+    "\n",
+    "# Using fancy indexing fill in the 1s at the correct index locations\n",
+    "one_hot[np.arange(one_hot.shape[0]), np.array([1,2,0]).flatten()] = 1.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +433,7 @@
        "       [1., 0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +476,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +500,7 @@
        "       [8, 9]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,12 +571,12 @@
     "        #\n",
     "        try:\n",
     "            y[:, :-1] = x[:, 1:]\n",
-    "            y[:, -1]  = encoded_text[:, n+seq_len]\n",
+    "            y[:, -1]  = encoded_text[:, n+seq_len] # potential out of range error\n",
     "            \n",
     "        # FOR POTENTIAL INDEXING ERROR AT THE END    \n",
     "        except:\n",
     "            y[:, :-1] = x[:, 1:]\n",
-    "            y[:, -1] = encoded_text[:, 0]\n",
+    "            y[:, -1] = encoded_text[:, 0] # the first item\n",
     "            \n",
     "        yield x, y"
    ]
@@ -462,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,28 +599,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([51, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26, 26,\n",
-       "       26, 26, 26])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sample_text"
+    "sample_text = np.arange(21)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,17 +627,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[51, 26, 26, 26, 26],\n",
-       "       [26, 26, 26, 26, 26]])"
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [10, 11, 12, 13, 14]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,17 +648,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 150,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4,  5],\n",
+       "       [11, 12, 13, 14, 15]])"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Grab first batch\n",
+    "x, y = next(batch_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[26, 26, 26, 26, 26],\n",
-       "       [26, 26, 26, 26, 26]])"
+       "array([[ 5,  6,  7,  8,  9],\n",
+       "       [15, 16, 17, 18, 19]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6,  7,  8,  9,  0],\n",
+       "       [16, 17, 18, 19, 10]])"
+      ]
+     },
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,24 +1300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 161,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CharModel(\n",
-       "  (lstm): LSTM(84, 512, num_layers=3, batch_first=True, dropout=0.5)\n",
-       "  (dropout): Dropout(p=0.5)\n",
-       "  (fc_linear): Linear(in_features=512, out_features=84, bias=True)\n",
-       ")"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.load_state_dict(torch.load(model_name))\n",
     "model.eval()"
@@ -1326,7 +1481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
